Remove classpath shenanigans and jarchecker.
These things should be entirely unnecessary with modular jars.